--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 # Ignore Gradle project-specific cache directory
-.gradle
+.gradle/
 
 # Ignore Gradle build output directory
-build
+build/
+
+# Ignore build output
+bin/
 
 # Ignore Oracle Graph packages
 oracle-graph-client-20.1.0/
 oracle-graph-client-20.1.0.zip
 
+# Ignore IDE settings
+.settings/
+.project
+x2oracle.code-workspace
