Use of properties file

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,13 @@ build/
 bin/
 
 # Ignore Oracle Graph packages
-oracle-graph-client-20.1.0/
-oracle-graph-client-20.2.0/
-oracle-graph-client-20.1.0.zip
-oracle-graph-client-20.2.0.zip
+oracle-graph-client-21.2.0/
+oracle-graph-client-21.2.0.zip
 
 # Ignore IDE settings
 .settings/
 .project
 x2oracle.code-workspace
+
+# Ignore Properties
+src/main/resources/common.properties
