--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ build/
 bin/
 
 # Ignore Oracle Graph packages
-oracle-graph-client-21.3.0/
-oracle-graph-client-21.3.0.zip
+oracle-graph-client-*/
+oracle-graph-client-*.zip
 
 # Ignore IDE settings
 .settings/
