--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,11 @@ mainClassName = 'x2ora.Main'
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
+    //jcenter()
+    maven {
+      url "https://artifacts.metaborg.org/content/repositories/releases/"
+    }
 }
 
 dependencies {
@@ -36,9 +40,14 @@ dependencies {
     // Javalin
     implementation 'io.javalin:javalin:4.6.4'
     implementation group: 'org.json', name: 'json', version: '20220320'
+
+    // Jackson
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.3'
     
     // Oracle Graph Client
-    implementation fileTree(dir: './oracle-graph-client-23.2.0/lib/', include: '*.jar', exclude: 'ons-19.12.0.0.jar')
+    implementation 'com.oracle.database.graph:opg-client:23.2.0'
+    //implementation fileTree(dir: './oracle-graph-client-23.2.0/lib/', include: '*.jar', exclude: 'ons-19.12.0.0.jar')
     // implementation fileTree(dir: '/opt/oracle/graph/client/lib/', include: '*.jar', exclude: 'ons-19.12.12.0.0.jar')
 }
 
