--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'io.javalin:javalin-testtools:4.6.1'
     testImplementation 'org.assertj:assertj-core:3.23.1'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
+    testImplementation 'junit:junit:4.13.2'
 
     // Javalin
     implementation 'io.javalin:javalin:4.6.4'
